created login form tempalte

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
         "outDir": "./built"
     },
     "include": ["./src/**/*"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+    "exclude": ["node_modules", "**/*.spec.ts"],
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "display": "Recommended"
 }
