--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "comp": "npx tsc",
-        "dev": "npm run comp & nodemon built/index.js",
+        "dev": "npm run comp & nodemon --ignore sessions/*.json built/src/index.js",
         "lint": "npx eslint . --ext .ts,.js"
     },
     "repository": {
@@ -24,7 +24,16 @@
     },
     "homepage": "https://github.com/Aearsears/express-passportjs-explanation#readme",
     "devDependencies": {
+        "@types/body-parser": "^1.19.1",
         "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^16.9.4",
+        "@types/parseurl": "^1.3.1",
+        "@types/passport": "^1.0.7",
+        "@types/passport-local": "^1.0.34",
+        "@types/pug": "^2.0.5",
+        "@types/session-file-store": "^1.2.2",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
         "@typescript-eslint/parser": "^4.31.2",
         "eslint": "^7.32.0",
@@ -32,12 +41,18 @@
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.1.0",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.12",
         "typescript": "^4.4.3"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
-        "passport": "^0.4.1"
+        "parseurl": "^1.3.3",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "pug": "^3.0.2",
+        "session-file-store": "^1.5.0"
     }
 }
