--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules", "**/*.spec.ts"],
+    "files": ["./src/index.ts"],
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended"
 }
