--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "comp": "npx tsc",
-        "dev": "npm run comp & nodemon --ignore sessions/*.json built/src/index.js",
+        "dev": "npm run comp & nodemon -e js,pug --ignore sessions/*.json --watch views built/src/index.js",
         "lint": "npx eslint . --ext .ts,.js"
     },
     "repository": {
