--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "comp": "npx tsc",
         "dev": "npm run comp & nodemon -e js,pug --ignore sessions/*.json --watch views built/src/index.js",
-        "lint": "npx eslint . --ext .ts,.js"
+        "lint": "npx eslint . --ext .ts,.js",
+        "run": "npm run comp & node built/src/index.js"
     },
     "repository": {
         "type": "git",
