commit procfile for heroku deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "comp": "npx tsc",
         "dev": "npm run comp & nodemon -e js,pug --ignore sessions/*.json --watch views built/src/index.js",
         "lint": "npx eslint . --ext .ts,.js",
-        "start": "npm run comp & node built/src/index.js"
+        "postinstall": "tsc",
+        "start": "node built/src/index.js"
     },
     "repository": {
         "type": "git",
